# TobiiMouse

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  appveyor.yml
src/: GazeTracker.cpp  GazeTracker.hpp  GazeWorkerThread.cpp  GazeWorkerThread.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MouseIntegration.cpp  MouseIntegration.hpp  NoiseCancellation.cpp  NoiseCancellation.hpp  TobiiAPI.cpp  TobiiAPI.hpp  TobiiDevice.cpp  TobiiDevice.hpp  TobiiMouse.pro  TobiiMouse.pro.user.bfe3244  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouse_integration.cpp  mouse_integration.h  noise_cancellation.cpp  noise_cancellation.h  tobii_interactive.cpp  tobii_interactive.h  tobii_interactive_threadworkers.cpp  tobiimouse.h
src/qthread_controller/: qthreadcontroller.cpp  qthreadcontroller.h  qthreadworker.cpp  qthreadworker.h
src/tobii/: tobii.h  tobii_advanced.h  tobii_config.h  tobii_engine.h  tobii_licensing.h  tobii_streams.h  tobii_wearable.h
